fixing spacing in links and adding missing image

--- a/src/main/webapp/css/tdar-base.css
+++ b/src/main/webapp/css/tdar-base.css
@@ -87,8 +87,7 @@ a.button {
 	transition: 0.1s ease-out;
 	-moz-transition: 0.1s ease-out;
 	-webkit-transition: 0.1s ease-out;
-	filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src=hIEfix.png,
-		sizingMethod=crop );
+	filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src=/images/hIEfix.png, sizingMethod=crop );
 	zoom: 1;
 	padding-left: 8px;
 	padding-right: 8px;
